--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.12.52",
+    "@expo/webpack-config": "~18.0.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react": "~18.0.27",
-    "expo": "^49.0.7",
+    "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-art": "^18.2.0",
@@ -25,8 +25,10 @@
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10",
     "typescript": "^4.9.4",
-    "@react-native-community/datetimepicker": "7.2.0"
+    "@react-native-community/datetimepicker": "6.7.3"
+    "expo-file-system": "~15.2.2"
   },
+  
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
