--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ajokilsat",
+  "name": "ajohomma",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -25,10 +25,11 @@
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10",
     "typescript": "^4.9.4",
-    "@react-native-community/datetimepicker": "6.7.3"
+    "@react-native-community/datetimepicker": "6.7.3",
     "expo-file-system": "~15.2.2"
+    
   },
-  
+
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
